# dagama

./: CMakeLists.txt  README.md  fastcgi.c  fastcgi.h  handle_config.c  handle_config.h  handle_header.c  handle_header.h  handle_request_header.c  main.c  main.h  mime.types  mysignal.c  mysignal.h  mystring.c  mystring.h  myutils.c  myutils.h  process_request.c  process_request.h  process_request_fastcgi.c  request_header.c  request_header.h  response_data.c  response_data.h  response_header.c  response_header.h  session.c  session.h  tool.c  tool.h  write_log.c  write_log.h  writen_readn_readline.c  writen_readn_readline.h
conf/: dagama.conf
webroot/: index.htm  index.html  liushan.txt  qq.html  shanshan.html
webroot-2/: index.html
webroot/html/: 403.html  404.html  405.html
